se cambia nombre del tirulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Pantalla de práctica</title>
+    <title>Pantalla de lol</title>
     <style>
         :root {
             --bg1: #6dd5ed;
